sort.baseball.BubbleBaseball.scala.error
Compilation error:
BubbleBaseball:1: error: Missing closing brace `}' assumed here
override def run() {
^BubbleBaseball:1: error: expected start of definition
override def run() {
         ^BubbleBaseball:26: error: expected class or object definition
def setTrouToOne() { //On amène le trou à la position 1
^